2000-04-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL), objects.c (scm_mcache_lookup_cmethod,
	scm_make_subclass_object), objects.h (SCM_CLASS_FLAGS,
	SCM_ENTITY_PROCEDURE, SCM_ENTITY_SETTER), struct.c
	(scm_struct_init, scm_struct_vtable_p, scm_make_struct,
	scm_struct_ref, scm_struct_set_x), struct.h (SCM_STRUCT_DATA):
	The struct data is now an array of scm_bits_t variables.

	* objects.h (SCM_SET_ENTITY_PROCEDURE):  New macro.

	* objects.c (scm_set_object_procedure_x):  Use it.

	* struct.c (scm_struct_init):  Unused variable 'data' removed.

	(scm_struct_vtable_p):  Redundant SCM_IMP tests removed.

2000-04-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* objects.h (SCM_OBJ_CLASS_FLAGS, SCM_OBJ_CLASS_REDEF), struct.h
	(SCM_STRUCT_VTABLE_DATA, SCM_STRUCT_LAYOUT, SCM_STRUCT_VTABLE,
	SCM_STRUCT_PRINTER):  The struct vtable data is now an array of
	scm_bits_t variables.

	* struct.h (SCM_SET_STRUCT_LAYOUT):  New macro.

	* struct.c (scm_make_vtable_vtable):  Use it.

2000-04-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* symbols.c (scm_sym2vcell, scm_sym2ovcell_soft, scm_sym2ovcell,
	scm_intern_obarray_soft, scm_sysintern0,
	scm_string_to_obarray_symbol, scm_intern_symbol,
	scm_unintern_symbol, scm_symbol_binding, scm_symbol_interned_p,
	scm_symbol_bound_p, scm_symbol_set_x):  Don't use C operators to
	compare SCM values.

2000-04-11  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_quotient, scm_modulo):  Reordered to handle the
	case of immediate numbers parameters first.  Also, only use
	decoded numbers for numerical comparison.
	
2000-04-10  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* objects.h: Don't redeclare scm_call_generic_0 and
	scm_apply_generic.  (Thanks to Tal Tversky.)

2000-04-10  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* hash.c (scm_hasher):  Use symbolic names for the tc3 constants.
	Unpack SCM value to use it as a switch parameter.  Don't cast SCM
	values to int values.

2000-04-10  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
